Add task edit endpoint and change tak manage route.
