# openapi_specs.json
@@ -193,7 +193,8 @@
           "reject",
           "close",
           "report_success",
-          "report_failure"
+          "report_failure",
+          "edit"
         ],
         "title": "TaskAction",
         "type": "string"
@@ -223,6 +224,40 @@
           "location"
         ],
         "title": "TaskCreationRequestSchema",
+        "type": "object"
+      },
+      "TaskEditRequestSchema": {
+        "properties": {
+          "category": {
+            "title": "Category",
+            "type": "string"
+          },
+          "description": {
+            "title": "Description",
+            "type": "string"
+          },
+          "location": {
+            "anyOf": [
+              {
+                "$ref": "#/components/schemas/Location"
+              },
+              {
+                "type": "null"
+              }
+            ]
+          },
+          "title": {
+            "title": "Title",
+            "type": "string"
+          }
+        },
+        "required": [
+          "title",
+          "description",
+          "category",
+          "location"
+        ],
+        "title": "TaskEditRequestSchema",
         "type": "object"
       },
       "TaskLocationSchema": {
@@ -773,9 +808,68 @@
         "tags": [
           "task"
         ]
-      },
+      }
+    },
+    "/task/{task_id}/edit": {
       "put": {
-        "operationId": "manage_task_task__task_id__put",
+        "operationId": "edit_task_task__task_id__edit_put",
+        "parameters": [
+          {
+            "in": "path",
+            "name": "task_id",
+            "required": true,
+            "schema": {
+              "title": "Task Id",
+              "type": "integer"
+            }
+          }
+        ],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/TaskEditRequestSchema"
+              }
+            }
+          },
+          "required": true
+        },
+        "responses": {
+          "200": {
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/TaskSchema"
+                }
+              }
+            },
+            "description": "Successful Response"
+          },
+          "422": {
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/HTTPValidationError"
+                }
+              }
+            },
+            "description": "Validation Error"
+          }
+        },
+        "security": [
+          {
+            "OAuth2PasswordBearer": []
+          }
+        ],
+        "summary": "Edit Task",
+        "tags": [
+          "task"
+        ]
+      }
+    },
+    "/task/{task_id}/manage": {
+      "put": {
+        "operationId": "manage_task_task__task_id__manage_put",
         "parameters": [
           {
             "in": "path",
